# flatbuffer_cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: main.cc
src/fbs/: monster.fbs
